# mvmm-graphs

./: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h  CouplingGraph.cpp  CouplingGraph.h  DataStorage.cpp  DataStorage.h  ExplicitCouplingGraph.cpp  ExplicitCouplingGraph.h  FindQhull.cmake  GraphStorage.cpp  GraphStorage.h  ModuleDistanceCouplingGraph.cpp  ModuleDistanceCouplingGraph.h  NodeSetCouplingGraph.cpp  NodeSetCouplingGraph.h  ProgressDisplay.cpp  ProgressDisplay.h  README.md  ResultCachedGraph.h  SimilarityCouplingGraph.cpp  WeightCombinedGraph.cpp  main.cpp  update.sh  util.cpp  util.h
example-data/eclipse/: stdin.txt
example-data/hikaricp/: evolutionary.graph  linguistic.graph  stdin.txt  structural.graph
example-data/jedit/: stdin.txt  structural.graph
example-data/jfreechart/: evolutionary.graph  linguistic.graph  stdin.txt  structural.graph
graph/: CouplingGraph.cpp  CouplingGraph.h  ExplicitCouplingGraph.cpp  ExplicitCouplingGraph.h  ModuleDistanceCouplingGraph.cpp  ModuleDistanceCouplingGraph.h  NodeSetCouplingGraph.cpp  NodeSetCouplingGraph.h  ResultCachedGraph.cpp  ResultCachedGraph.h  SimilarityCouplingGraph.cpp  SimilarityCouplingGraph.h  WeightCombinedGraph.cpp  WeightCombinedGraph.h
graph/graphMixins/: NormalizeCouplingWithChildren.cpp  NormalizeCouplingWithChildren.h  NormalizeSupport.cpp  NormalizeSupport.h  NormalizeSupportWithChildren.cpp  NormalizeSupportWithChildren.h
graphMixins/: NormalizeCouplingWithChildren.cpp  NormalizeCouplingWithChildren.h  NormalizeCouplingWithChildren.inl  NormalizeSupport.cpp  NormalizeSupport.h  NormalizeSupport.inl  NormalizeSupportWithChildren.cpp  NormalizeSupportWithChildren.h  NormalizeSupportWithChildren.inl
src/: BestResultSet.h  CommandExecutor.cpp  DataStorage.cpp  DataStorage.h  ProgressDisplay.cpp  ProgressDisplay.h  disagreementAnalysis.cpp  disagreementAnalysis.h  errorHandler.cpp  main.cpp  radixsort.cpp  timsort.hpp  util.cpp  util.h
src/graph/: CouplingGraph.cpp  CouplingGraph.h  ExplicitCouplingGraph.cpp  ExplicitCouplingGraph.h  ModuleDistanceCouplingGraph.cpp  NodeSetCouplingGraph.cpp  NodeSetCouplingGraph.h  ResultCachedGraph.cpp  ResultCachedGraph.h  SimilarityCouplingGraph.cpp  SimilarityCouplingGraph.h  WeightCombinedGraph.cpp  WeightCombinedGraph.h
src/graph/graphMixins/: NormalizeCouplingWithChildren.cpp  NormalizeCouplingWithChildren.h  NormalizeSupport.cpp  NormalizeSupportWithChildren.cpp  NormalizeSupportWithChildren.h
src/parallel/: ParallelExplicitGraph.cpp  ParallelExplicitGraph.h  ParallelJobsExecutor.cpp  ParallelJobsExecutor.h  README.md
